<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.wso2.carbon.automation</groupId>
	<artifactId>org.wso2.carbon.automation.tools</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>
	<name>WSO2 Carbon - Robot Testing Pom</name>
	<url>http://wso2.org</url>


	<properties>
		<carbon.stub.version>4.3.0-SNAPSHOT</carbon.stub.version>
	</properties>

	<pluginRepositories>
		<pluginRepository>
			<id>wso2-maven2-repository-1</id>
			<url>http://dist.wso2.org/maven2</url>
		</pluginRepository>
		<pluginRepository>
			<id>wso2-maven2-repository-2</id>
			<url>http://dist.wso2.org/snapshots/maven2</url>
		</pluginRepository>
	</pluginRepositories>


	<build>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>2.1</version>
			</extension>
		</extensions>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-scr-plugin</artifactId>
					<version>1.7.2</version>
					<executions>
						<execution>
							<id>generate-scr-scrdescriptor</id>
							<goals>
								<goal>scr</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>2.3.5</version>
					<extensions>true</extensions>
					<configuration>
						<obrRepository>NONE</obrRepository>
						<!--<instructions> <_include>-osgi.bnd</_include> </instructions> -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>verify</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2-beta-2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>2.4</version>
				</plugin>
			</plugins>
		</pluginManagement>


		<plugins>


			<!-- uncomment robot framework plugin for debug purposes -->

			<!-- <plugin> -->
			<!-- <groupId>com.googlecode.robotframework-maven-plugin</groupId> -->
			<!-- <artifactId>robotframework-maven-plugin</artifactId> -->
			<!-- <version>1.1.2</version> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <goals> -->
			<!-- <goal>run</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>

			<!-- to do: use mojo -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.1</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>client.genration.ServiceStubClientGenerator</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
				<inherited>false</inherited>
				<configuration>
					<!-- <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m -Xmx1024m -XX:PermSize=256m 
						-XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006 
						</argLine> -->
					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=128m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<disableXmlReport>false</disableXmlReport>
					<parallel>false</parallel>
					<suiteXmlFiles>
						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
					</suiteXmlFiles>
					<systemProperties>
						<property>
							<name>framework.resource.location</name>
							<value>
								<!--Define the place where your test artifacts/resources are -->
								${basedir}/src/test/resources/
							</value>
						</property>

						<maven.test.haltafterfailure>false</maven.test.haltafterfailure>
					</systemProperties>
					<workingDirectory>${basedir}/target</workingDirectory>
				</configuration>
			</plugin>

			<!-- report of test coverage -->
<!-- 			<plugin> -->
<!-- 				<groupId>org.codehaus.mojo</groupId> -->
<!-- 				<artifactId>emma-maven-plugin</artifactId> -->
<!-- 				<version>1.0-alpha-3</version> -->
<!-- 				<inherited>true</inherited> -->
<!-- 				<executions> -->
<!-- 					<execution> -->
<!-- 						<phase>process-classes</phase> -->
<!-- 						<goals> -->
<!-- 							<goal>instrument</goal> -->
<!-- 						</goals> -->
<!-- 					</execution> -->
<!-- 				</executions> -->
<!-- 			</plugin> -->
			
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
<!-- 				<inherited>true</inherited> -->
<!-- 				<configuration> -->
<!-- 					<forkMode>once</forkMode> -->
<!-- 					<reportFormat>xml</reportFormat> -->
<!-- 					<classesDirectory>${project.build.directory}/generated-classes/emma/classes</classesDirectory> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->
		</plugins>

	</build>

<!-- 	<reporting> -->
<!-- 		<plugins> -->
<!-- 			<plugin> -->
<!-- 				<groupId>org.codehaus.mojo</groupId> -->
<!-- 				<artifactId>emma-maven-plugin</artifactId> -->
<!-- 				<version>1.0-alpha-3</version> -->
<!-- 				<inherited>true</inherited> -->
<!-- 			</plugin> -->
<!-- 			<plugin> -->
<!-- 				<groupId>org.codehaus.mojo</groupId> -->
<!-- 				<artifactId>surefire-report-maven-plugin</artifactId> -->
<!-- 				<inherited>true</inherited> -->
<!-- 			</plugin> -->
<!-- 		</plugins> -->
<!-- 	</reporting> -->

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>

			</modules>
		</profile>
		<profile>
			<id>builder</id>
			<activation>
				<property>
					<name>builder</name>
					<value>true</value>
				</property>
			</activation>

			<modules>

			</modules>
		</profile>
		<profile>
			<id>sonar-profile</id>
			<activation>
				<property>
					<name>bamboo</name>
					<value>sonar</value>
				</property>
			</activation>
			<modules>
				<module>core</module>
				<module>components</module>
			</modules>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>wso2-maven2-repository</id>
			<name>WSO2 Maven2 Repository</name>
			<url>scp://dist.wso2.org/home/httpd/dist.wso2.org/maven2/</url>
		</repository>
		<snapshotRepository>
			<id>wso2-maven2-snapshot-repository</id>
			<name>WSO2 Maven2 Snapshot Repository</name>
			<url>scp://dist.wso2.org/home/httpd/dist.wso2.org/snapshots/maven2/</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.wso2.carbon</groupId>
				<artifactId>org.wso2.carbon.user.mgt.stub</artifactId>
				<version>${carbon.stub.version}</version>
			</dependency>
			<dependency>
				<groupId>org.wso2.carbon</groupId>
				<artifactId>org.wso2.carbon.server.admin.stub</artifactId>
				<version>${carbon.stub.version}</version>
			</dependency>

			<dependency>
				<groupId>org.wso2.carbon</groupId>
				<artifactId>org.wso2.carbon.authenticator.stub</artifactId>
				<version>${carbon.stub.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.user.mgt.stub</artifactId>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.authenticator.stub</artifactId>
		</dependency>

		<dependency>
			<groupId>org.apache.axis2.wso2</groupId>
			<artifactId>axis2-client</artifactId>
			<version>1.6.1.wso2v10</version>
		</dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>ST4</artifactId>
			<version>4.0.7</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.1.1</version>
			<!--<scope>test</scope> -->
		</dependency>

		<!-- Stub Dependencies -->

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.registry.info.stub</artifactId>
			<version>4.3.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.admin.mgt.stub</artifactId>
			<version>4.0.0</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.service.mgt.stub</artifactId>
			<version>4.3.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.discovery.admin.stub</artifactId>
			<version>4.3.0-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.proxyadmin.stub</artifactId>
			<version>4.3.0-SNAPSHOT</version>
		</dependency>

		<!-- soa -->

		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-xml</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-json</artifactId>
			<version>2.0.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-test</artifactId>
			<version>2.0.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.2</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.predic8</groupId>
			<artifactId>soa-model-distribution</artifactId>
			<version>1.4.1.4</version>
		</dependency>

		<dependency>
			<groupId>com.predic8</groupId>
			<artifactId>soa-model-core</artifactId>
			<version>1.4.1.4</version>
		</dependency>

		<!-- stockquoteclient -->

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.application.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.user.api</artifactId>
			<version>4.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.logging</artifactId>
			<version>4.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.bootstrap</artifactId>
			<version>4.2.0</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.base</artifactId>
			<version>4.2.0</version>
		</dependency>


		<dependency>
			<groupId>org.wso2.carbon.automation</groupId>
			<artifactId>org.wso2.carbon.automation.engine</artifactId>
			<version>4.3.1-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.registry.search.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.operation.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.statistics.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.webapp.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.ndatasource.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.dataservices.fileupload.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.caching.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.jarservices.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.registry.indexing.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.transport.jms.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.throttle.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.module.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.sample.installer.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.application.mgt.webapp.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.bam.service.data.publisher.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.registry.extensions.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.dataservices.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.theme.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.bam.webapp.stat.publisher.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.aarservices.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.tracer.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.transport.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.identity.user.store.configuration.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.tenant.mgt.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.deployment.synchronizer.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.viewflows.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.registry.properties.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.repomanager.axis2.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.logging.view.stub</artifactId>
			<version>4.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.wso2.carbon</groupId>
			<artifactId>org.wso2.carbon.wsdl2code.stub</artifactId>
			<version>4.2.0</version>
		</dependency>

		<!-- test coverage -->
		<!-- need to find and add correct version -->
		<!-- <dependency> -->
		<!-- <groupId>emma</groupId> -->
		<!-- <artifactId>emma</artifactId> -->
		<!-- </dependency> -->

	</dependencies>

	<repositories>


		<repository>
			<id>wso2-nexus</id>
			<name>WSO2 internal Repository</name>
			<url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>weekly</updatePolicy>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
		</repository>

		<repository>
			<id>wso2.releases</id>
			<name>WSO2 internal Repository</name>
			<url>http://maven.wso2.org/nexus/content/repositories/releases/</url>
			<releases>
				<enabled>true</enabled>
				<!-- <updatePolicy>daily</updatePolicy> -->
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>ignore</checksumPolicy>
			</releases>
		</repository>

		<repository>
			<id>wso2.snapshots</id>
			<name>WSO2 Snapshot Repository</name>
			<url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
				<!-- <updatePolicy>daily</updatePolicy> -->
				<updatePolicy>never</updatePolicy>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

</project>
